--- a/_css/globalnews.skin.less
+++ b/_css/globalnews.skin.less
@@ -521,6 +521,10 @@ a{
 
 /* Skin Style for Responsive Menu */
 
+.snap-drawers{
+	background: @primary + 10;
+}
+
 .responsive-menu {
 	background: @primary + 10;
 
@@ -530,7 +534,6 @@ a{
 	}
 
 	a {
-
 		border-bottom: 1px solid @primary;
 
 		&:hover {
